Use world group more in sleep to try to fix bug